airflow/logs/dag_id=etl_hh/run_id=manual__2023-11-19T105035.830558+0000/task_id=load_core_fact_vacancy/attempt=1.log
[2023-11-19 10:51:11,429] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: etl_hh.load_core_fact_vacancy manual__2023-11-19T10:50:35.830558+00:00 [queued]>
[2023-11-19 10:51:11,476] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: etl_hh.load_core_fact_vacancy manual__2023-11-19T10:50:35.830558+00:00 [queued]>
[2023-11-19 10:51:11,477] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2023-11-19 10:51:11,479] {taskinstance.py:1377} INFO - Starting attempt 1 of 2
[2023-11-19 10:51:11,480] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2023-11-19 10:51:11,529] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): load_core_fact_vacancy> on 2023-11-19 10:50:35.830558+00:00
[2023-11-19 10:51:11,538] {standard_task_runner.py:52} INFO - Started process 271 to run task
[2023-11-19 10:51:11,544] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'etl_hh', 'load_core_fact_vacancy', 'manual__2023-11-19T10:50:35.830558+00:00', '--job-id', '126', '--raw', '--subdir', 'DAGS_FOLDER/pipeline.py', '--cfg-path', '/tmp/tmp8osy55of', '--error-file', '/tmp/tmphxtvxok1']
[2023-11-19 10:51:11,546] {standard_task_runner.py:80} INFO - Job 126: Subtask load_core_fact_vacancy
[2023-11-19 10:51:11,734] {task_command.py:371} INFO - Running <TaskInstance: etl_hh.load_core_fact_vacancy manual__2023-11-19T10:50:35.830558+00:00 [running]> on host ee772b517b86
[2023-11-19 10:51:11,973] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=etl_hh
AIRFLOW_CTX_TASK_ID=load_core_fact_vacancy
AIRFLOW_CTX_EXECUTION_DATE=2023-11-19T10:50:35.830558+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-19T10:50:35.830558+00:00
[2023-11-19 10:51:11,993] {base.py:68} INFO - Using connection ID 'my_db_conn' for task execution.
[2023-11-19 10:51:12,028] {dbapi.py:231} INFO - Running statement: INSERT INTO core.fact_vacancy (
            id,
            vacancy_name,
            grade,
            published_at,
            is_archive,
            is_open,
            employer_id,
            experience_id,
            area_id,
            salary_from,
            salary_to,
            is_gross,
            salary_currency
        )
        SELECT DISTINCT
            id,
            CASE 
                WHEN vacancy_name ILIKE '%data engineer%' 
                    OR vacancy_name ILIKE '%data инженер%'
                    OR vacancy_name ILIKE '%дата Инженер%'
                    OR vacancy_name ILIKE '%инженер данных%'
                THEN 'Инженер данных'
                WHEN vacancy_name ILIKE '%аналитик данных%' 
                    OR vacancy_name ILIKE '%data analyst%'
                THEN 'Аналитик данных'
                WHEN vacancy_name ILIKE '%data scientist%'
                    OR vacancy_name ILIKE '%исследователь данных%'
                THEN 'Data scientist'
            END AS vacancy_name,
            CASE
                WHEN vacancy_name LIKE ('%Стажер%')
                THEN 'Intern'
                WHEN vacancy_name LIKE ('%Младший%')
                    OR vacancy_name LIKE ('%Junior%')
                THEN 'Junior'
                WHEN vacancy_name LIKE ('%Старший%')
                    OR vacancy_name LIKE ('%Middle%')
                THEN 'Middle'
                WHEN vacancy_name LIKE ('%Ведущий%')
                    OR vacancy_name LIKE ('%Senior%')
                THEN 'Senior'
                WHEN vacancy_name LIKE ('%Руководитель%')
                    OR vacancy_name LIKE ('%Team Lead%')
                THEN 'Team Lead'
            END AS grade,
            CASE
                WHEN experience_id = 'noExperience'
                THEN 'Intern'
                WHEN experience_id = 'between1And3'
                THEN 'Junior'
                WHEN experience_id = 'between3And6'
                THEN 'Middle'
                WHEN experience_id = 'moreThan6'
                THEN 'Senior'
            END AS grade_experience,
            published_at,
            is_archive,
            is_open,
            employer_id ,
            experience_id,
            area_id,
            salary_from,
            salary_to,
            is_gross,
            salary_currency
        FROM staging.vacancy, parameters: None
[2023-11-19 10:51:12,042] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 66:             salary_currency
                     ^

[2023-11-19 10:51:12,062] {taskinstance.py:1420} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_hh, task_id=load_core_fact_vacancy, execution_date=20231119T105035, start_date=20231119T105111, end_date=20231119T105112
[2023-11-19 10:51:12,090] {standard_task_runner.py:97} ERROR - Failed to execute job 126 for task load_core_fact_vacancy (INSERT has more expressions than target columns
LINE 66:             salary_currency
                     ^
; 271)
[2023-11-19 10:51:12,119] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-11-19 10:51:12,190] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
